# nswap-rs

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.toml  .prettierrc.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
contract/: rustfmt.toml
contract/neardev/: dev-account  dev-account.env
frontend/: package-lock.json
nswap/: Cargo.toml
nswap/src/: account_deposit.rs  action.rs  custom_keys.rs  errors.rs  legacy.rs  lib.rs  multi_fungible_token.rs  owner.rs  pool.rs  simple_pool.rs  storage_impl.rs  token_receiver.rs  utils.rs  views.rs
nswap/src/rated_swap/: linear_rate.rs  math.rs  mod.rs  nearx_rate.rs  rate.rs  stnear_rate.rs
nswap/src/stable_swap/: math.rs  mod.rs
nswap/tests/: test_admin_fee.rs  test_errors.rs  test_frozenlist.rs  test_fuzz_amm.rs  test_fuzzy_stable.rs  test_guardians.rs  test_inner_account.rs  test_instant_swap.rs  test_owner.rs  test_rated_pool.rs  test_stable_pool.rs  test_storage.rs  test_swap.rs
nswap/tests/common/: utils.rs
nswap/tests/fuzzy/: constants.rs  create_simple_pool.rs  direct_swap.rs  liquidity_manage.rs  mod.rs  pool_swap.rs  types.rs  utils.rs
scripts/: build_all.sh  deploy.sh  rust_setup.sh
test-rated-token/src/: lib.rs
test-token/src/: lib.rs
