[package]
name = "nswap"
version = "1.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.3", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
once_cell = "=1.8.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
rand = "0.8"
rand_pcg = "0.3"
